--- a/apps/desktop/src/view/index.html
+++ b/apps/desktop/src/view/index.html
@@ -6,7 +6,7 @@
   <title>PromptX Desktop</title>
 </head>
 <body>
-  <h1>PromptX Desktop</h1>
-  <p>This is a tray-only application. This window should not normally be visible.</p>
+  <div id="root"></div>
+  <script type="module" src="./main.tsx"></script>
 </body>
 </html>
